<resources>
    <string name="app_name">Taiepi Zoo</string>
    <string name="no_area_memo">無休館資訊</string>
    <string name="title_area_list">台北市立動物園</string>
    <string name="open_web">在網頁開啟</string>
    <string name="plant_info">植物資料</string>
    <string name="also_known">別名</string>
    <string name="brief">簡介</string>
    <string name="feature">辨認方式</string>
    <string name="function">功能性</string>
    <string name="label_last_update">最後更新 : </string>
    <string name="ssl_certification_error">SSL連線憑證錯誤，是否繼續瀏覽?</string>
    <string name="btn_cancel">取消</string>
</resources>
